--- a/18_jQuery/1_jQuery/exercise/partOne/index.html
+++ b/18_jQuery/1_jQuery/exercise/partOne/index.html
@@ -75,6 +75,37 @@
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script>
   // Add your code here!
+  // 1. 
+  $(function() {console.log("Let's get ready to party with jQuery!")});
+
+  // 2. 
+  $("article img").addClass('image-center')
+
+  //3. 
+  $("p").last().remove()
+
+  //4.
+  $("#title").css("fontSize", Math.random() * (100))
+
+  //5. 
+  $('ol').append('<li>Did it work?</li>')
+
+  //6. 
+  $('aside').empty().append($('<p>', {text:'Sorry for creating the list in the first place!'}))
+
+  //7.
+  $('.form-control').on('input', function() {
+    let red = $('.form-control').eq(0).val();
+    let blue = $('.form-control').eq(1).val();
+    let green = $('.form-control').eq(2).val();
+    $('body').css('background-color', 'rgb('+red+','+blue+','+green); 
+  })
+
+  //8.
+  $('img').on('click', function(evt) {
+    $(evt.target).remove();
+  })
+
 </script>
 </body>
 
